Corrigindo alguns erros

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-.green {
-    color: #00ff00;
-}
-
 .table {
     width: 60%; 
     margin: 0%; 
@@ -14,4 +10,12 @@
 
 .table mb-4{
     width: 10%;
+}
+
+.green {
+    color: green;
+}
+
+.red {
+    color: red;
 }
